--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@unhead/vue": "^2.1.1",
     "maxmind": "^5.0.3",
     "nuxt": "^4.2.2",
+    "pdf-lib": "^1.17.1",
     "sass": "^1.97.1",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
