--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "^2.0.0",
     "@nuxt/scripts": "^0.13.2",
     "@unhead/vue": "^2.1.1",
+    "@vueuse/core": "^14.1.0",
     "maxmind": "^5.0.3",
     "nuxt": "^4.2.2",
     "pdf-lib": "^1.17.1",
