--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/scripts": "^0.13.2",
     "@unhead/vue": "^2.1.1",
     "@vueuse/core": "^14.1.0",
+    "canvas-confetti": "^1.9.4",
     "maxmind": "^5.0.3",
     "nuxt": "^4.2.2",
     "pdf-lib": "^1.17.1",
